CMAKE_MINIMUM_REQUIRED(VERSION 3.18.1 FATAL_ERROR)
SET(PROJECTNAME ModuleBase)
PROJECT(${PROJECTNAME})
ADD_DEFINITIONS("-DMODULEBASE_API")

#Qt
IF(NOT DEFINED Qt5_DIR)
	SET(Qt5_DIR "Qt5_DIR-NOTFOUND" CACHE PATH "Qt5_DIR")
	MESSAGE(SEND_ERROR "Qt5_DIR is null, please find Qt5_config.cmake file position!~")
ENDIF()
#VTK
IF(NOT DEFINED FASTCAE_VTK_INCLUDE)
	SET(FASTCAE_VTK_INCLUDE "FASTCAE_VTK_INCLUDE-NOTFOUND" CACHE PATH "FASTCAE_VTK_INCLUDE")
	MESSAGE(SEND_ERROR "FASTCAE_VTK_INCLUDE is null, please specified VTK include directory!~")
ENDIF()
IF(NOT DEFINED FASTCAE_VTK_LIBDIR)
	SET(FASTCAE_VTK_LIBDIR "FASTCAE_VTK_LIBDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_LIBDIR")
	MESSAGE(SEND_ERROR "FASTCAE_VTK_LIBDIR is null, please specified VTK release library directory!~")
ENDIF()
IF(NOT DEFINED FASTCAE_VTK_LIBDDIR)
	SET(FASTCAE_VTK_LIBDDIR "FASTCAE_VTK_LIBDDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_LIBDDIR")
	MESSAGE(SEND_ERROR "FASTCAE_VTK_LIBDDIR is null, please specified VTK debug library directory!~")
ENDIF()
IF(NOT DEFINED FASTCAE_VTK_BINDIR)
	SET(FASTCAE_VTK_BINDIR "FASTCAE_VTK_BINDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_BINDIR")
	MESSAGE(SEND_ERROR "FASTCAE_VTK_BINDIR is null, please specified VTK release dll directory!~")
ENDIF()
IF(NOT DEFINED FASTCAE_VTK_BINDDIR)
	SET(FASTCAE_VTK_BINDDIR "FASTCAE_VTK_BINDDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_BINDDIR")
	MESSAGE(SEND_ERROR "FASTCAE_VTK_BINDDIR is null, please specified VTK release dll directory!~")
ENDIF()
#OCC
IF(NOT DEFINED FASTCAE_OCC_INCLUDE)
	SET(FASTCAE_OCC_INCLUDE "FASTCAE_OCC_INCLUDE-NOTFOUND" CACHE PATH "FASTCAE_OCC_INCLUDE")
	MESSAGE(SEND_ERROR "FASTCAE_OCC_INCLUDE is null, please specified OCC include directory!~")
ENDIF()
IF(NOT DEFINED FASTCAE_OCC_LIBDIR)
	SET(FASTCAE_OCC_LIBDIR "FASTCAE_OCC_LIBDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_LIBDIR")
	MESSAGE(SEND_ERROR "FASTCAE_OCC_LIBDIR is null, please specified OCC release library directory!~")
ENDIF()
IF(NOT DEFINED FASTCAE_OCC_LIBDDIR)
	SET(FASTCAE_OCC_LIBDDIR "FASTCAE_OCC_LIBDDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_LIBDDIR")
	MESSAGE(SEND_ERROR "FASTCAE_OCC_LIBDDIR is null, please specified OCC debug library directory!~")
ENDIF()
IF(NOT DEFINED FASTCAE_OCC_BINDIR)
	SET(FASTCAE_OCC_BINDIR "FASTCAE_OCC_BINDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_BINDIR")
	MESSAGE(SEND_ERROR "FASTCAE_OCC_BINDIR is null, please specified OCC release dll directory!~")
ENDIF()
IF(NOT DEFINED FASTCAE_OCC_BINDDIR)
	SET(FASTCAE_OCC_BINDDIR "FASTCAE_OCC_BINDDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_BINDDIR")
	MESSAGE(FATAL_ERROR "FASTCAE_OCC_BINDDIR is null, please specified OCC release dll directory!~")
ENDIF()

IF(NOT DEFINED FASTCAE_VTK_LIBDS)
	FILE(GLOB FASTCAE_VTK_LIBDS "${FASTCAE_VTK_LIBDDIR}/*.lib")
ENDIF()
IF(NOT DEFINED FASTCAE_VTK_LIBS)
	FILE(GLOB FASTCAE_VTK_LIBS "${FASTCAE_VTK_LIBDIR}/*.lib")
ENDIF()
IF(NOT DEFINED FASTCAE_OCC_LIBDS)
	FILE(GLOB FASTCAE_OCC_LIBDS "${FASTCAE_OCC_LIBDDIR}/*.lib")
ENDIF()
IF(NOT DEFINED FASTCAE_OCC_LIBS)
	FILE(GLOB FASTCAE_OCC_LIBS "${FASTCAE_OCC_LIBDIR}/*.lib")
ENDIF()

#FILE(GLOB ModuleBase_TS_FILE "${TOP_PROJECT_SOURCE_DIR}/qrc/translations/ModuleBase_zh_CN.ts")
FILE(GLOB SRC_UI_FILES "*.ui")
FILE(GLOB SRC_H_FILES "*.h" "./Frameless/*.h")
FILE(GLOB SRC_CPP_FILES "*.cpp" "./Frameless/*.cpp")

#SET_SOURCE_FILES_PROPERTIES(${ModuleBase_TS_FILE} PROPERTIES OUTPUT_LOCATION "${TOP_PROJECT_SOURCE_DIR}/qrc/translations")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${TOP_PROJECT_SOURCE_DIR}/../output/bin_d)    
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${TOP_PROJECT_SOURCE_DIR}/../output/bin) 
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${TOP_PROJECT_SOURCE_DIR}/../output/bin_d)   
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${TOP_PROJECT_SOURCE_DIR}/../output/bin) 

INCLUDE_DIRECTORIES(${TOP_PROJECT_SOURCE_DIR}/SelfDefObject
					${TOP_PROJECT_SOURCE_DIR}
					${FASTCAE_VTK_INCLUDE} 
					${FASTCAE_OCC_INCLUDE})

#FIND_PACKAGE(Qt5 COMPONENTS Core Gui Widgets Xml PrintSupport LinguistTools REQUIRED)
FIND_PACKAGE(Qt5 COMPONENTS Core Gui Widgets Xml PrintSupport REQUIRED)
#QT5_CREATE_TRANSLATION(ModuleBase_QM_FILE ${PROJECT_SOURCE_DIR} 
#										  ${PROJECT_SOURCE_DIR}/Frameless
#										  ${ModuleBase_TS_FILE} OPTIONS -noobsolete)
QT5_ADD_RESOURCES(QFTRAN_Generated_QRC_FILE ${QF_QRC_FILE} ${TRAN_QRC_FILE})
QT5_WRAP_UI(SRC_Generated_UI_FILES ${SRC_UI_FILES})
SET(CMAKE_AUTOMOC ON)

#SOURCE_GROUP("Translation" FILES ${ModuleBase_QM_FILE} ${ModuleBase_TS_FILE})
SOURCE_GROUP("rc" FILES ${QFTRAN_Generated_QRC_FILE} ${QF_QRC_FILE} ${TRAN_QRC_FILE})
SOURCE_GROUP("Ui" FILES ${SRC_Generated_UI_FILES} ${SRC_UI_FILES})
SOURCE_GROUP("Generated Files" FILES "${TOP_PROJECT_BINARY_DIR}/moduleBase/${PROJECTNAME}_autogen/mocs_compilation.cpp")

ADD_LIBRARY(${PROJECTNAME} SHARED #${ModuleBase_TS_FILE}
								  #${ModuleBase_QM_FILE}
								  ${QFTRAN_Generated_QRC_FILE}
								  ${SRC_Generated_UI_FILES}								   
								  ${SRC_H_FILES}
								  ${SRC_CPP_FILES})
	
TARGET_LINK_LIBRARIES(${PROJECTNAME} Qt5::Core Qt5::Gui Qt5::Xml Qt5::Widgets Qt5::PrintSupport)					
TARGET_LINK_LIBRARIES(${PROJECTNAME} debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/Settings${CMAKE_DEBUG_POSTFIX}.lib"      optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/Settings${CMAKE_RELEASE_POSTFIX}.lib"
									 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/PythonModule${CMAKE_DEBUG_POSTFIX}.lib"  optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/PythonModule${CMAKE_RELEASE_POSTFIX}.lib"
									 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/DataProperty${CMAKE_DEBUG_POSTFIX}.lib"  optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/DataProperty${CMAKE_RELEASE_POSTFIX}.lib"
									 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/MeshData${CMAKE_DEBUG_POSTFIX}.lib"      optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/MeshData${CMAKE_RELEASE_POSTFIX}.lib"
									 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/Geometry${CMAKE_DEBUG_POSTFIX}.lib"      optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/Geometry${CMAKE_RELEASE_POSTFIX}.lib"
									 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/SelfDefObject${CMAKE_DEBUG_POSTFIX}.lib" optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/SelfDefObject${CMAKE_RELEASE_POSTFIX}.lib"
									 debug "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG}/ModelData${CMAKE_DEBUG_POSTFIX}.lib"     optimized "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE}/ModelData${CMAKE_RELEASE_POSTFIX}.lib")								 
ADD_DEPENDENCIES(${PROJECTNAME} ModelData)

FOREACH(FASTCAE_VTK_LIBD ${FASTCAE_VTK_LIBDS})
	TARGET_LINK_LIBRARIES(${PROJECTNAME} debug ${FASTCAE_VTK_LIBD})
ENDFOREACH()	
FOREACH(FASTCAE_VTK_LIB ${FASTCAE_VTK_LIBS})
	TARGET_LINK_LIBRARIES(${PROJECTNAME} optimized ${FASTCAE_VTK_LIB})
ENDFOREACH()

FOREACH(FASTCAE_OCC_LIBD ${FASTCAE_OCC_LIBDS})
	TARGET_LINK_LIBRARIES(${PROJECTNAME} debug ${FASTCAE_OCC_LIBD})
ENDFOREACH()	
FOREACH(FASTCAE_OCC_LIB ${FASTCAE_OCC_LIBS})
	TARGET_LINK_LIBRARIES(${PROJECTNAME} optimized ${FASTCAE_OCC_LIB})
ENDFOREACH()									 